--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Website</title>
 </head>
 <body>
-    <h1>welcome to my website</h1>
+
+    <h1>Welcome to My Website</h1>
+
+    <p>This is my first simple website using HTML.</p>
+
+    <h2>About Me</h2>
+    <p>My name is Nadia. I am learning web development.</p>
+
+    <h2>My Hobbies</h2>
+    <ul>
+        <li>Reading</li>
+        <li>Learning computers</li>
+        <li>Designing</li>
+    </ul>
+
+    <h2>Contact</h2>
+    <p>Email: example@email.com</p>
+
 </body>
 </html>
